tests/ucc/type/good/variadic-param.c
int b(int a, ...)
{
    return 0;
}

int main(void)
{
    return b(0, 0);
}
