tests/ucc/type/bad/too-many-args-1.c
int f(int a, int b)
{
    return a + b;
}

int main(void)
{
    int a;

    return f(a, 0, 0);
}
